task-03 (https://github.com/rolling-scopes-school/nodejs-aws-tasks/blob/main/task3-product-api/task.md)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client:deploy": "sls client deploy --no-config-change --no-policy-change --no-cors-change",
     "client:deploy:nc": "npm run client:deploy -- --no-confirm",
     "client:build:deploy": "npm run build && npm run client:deploy",
-    "client:build:deploy:nc": "npm run build && npm run client:deploy -- --no-confirm",
+    "client:build:deploy:nc": "npm run build && npm run client:deploy:nc",
     "cloudfront:setup": "sls deploy",
     "cloudfront:domainInfo": "sls domainInfo",
     "cloudfront:invalidateCache": "sls invalidateCloudFrontCache",
